2015-12-23 Marino Romano <sromanos@cern.ch>
	* Updating multijet estimation tools
	* Adding reaf and fake efficiencies maps: eff_ttbar.root and fake.root
	* TopNtupleAnalysis-00-02-11

2015-12-04 Marino Romano <sromanos@cern.ch>
	* Adding trigger branches to the MiniTree (prescaled and unprescaled). 
	* if prescaled triggers are used, implementing weights (for the fake estimate, so should not affect the standard analysis).
	* Updates on the fake estimation tools
	* TopNtupleAnalysis-00-02-09

2015-12-02 Danilo Ferreira de Lima <dferreir@cern.ch>
	* Added flag in read.cxx to apply EWK correction in ttbar.
	* TopNtupleAnalysis-00-02-08

2015-11-03 Marino Romano <sromanos@cern.ch>
	* Updating the MM code 

2015-10-29 Marino Romano <sromanos@cern.ch>
	* Updating the code to read z0, d0 and d0sig for electron and muon

2015-10-27 Danilo Ferreira de Lima <dferreir@cern.ch>
	* Added track jets in Event class. Added nTrk cut for track jets when
	applying track jet b-tagging. Added tau32 information in large jets.
	Added missing cross section information in XSection file. Added helper
	scripts to run code in lxbatch. Added option in read to remove high
	mtt events in the ttbar 410000 sample to avoid overlap with the
	mttsliced samples.
	* Added configurable setup for plotting scripts in plotting/.
	* TopNtupleAnalysis-00-02-05

2015-10-26 Marino Romano <sromanos@cern.ch>
	* Fixing typo bug in doQCDstudies.py
	* Improving getMMWeights code
	* TopNtupleAnalysis-00-02-04

2015-10-19 Marino Romano <sromanos@cern.ch>
	* Adding MMUtils class, for the implementation of the weights from the MM
	* TopNtupleAnalysis-00-02-02

2015-10-10 Marino Romano <sromanos@cern.ch>
	* Updated plotting code after tests.
	* Added latest SF systematics as in 2.3.30 setup.
	* TopNtupleAnalysis-00-02-01

2015-10-10 Marino Romano <sromanos@cern.ch>
        * Updates in the fake rate estimation

2015-10-02 Marino Romano <sromanos@cern.ch>
        * First steps on the fake rate estimation
