@@ -23,34 +23,34 @@ class MMUtils{
     MMUtils(const std::string &eff_filename="eff.root", const std::string &fake_filename="fake.root"); 
     ~MMUtils();
 
-    float getMMweights(const Event &evt, int runMM_StatErr);
-
+    float getMMweights(const Event &evt, const int runMM_StatErr, const bool isElectron, const bool isBoosted);
+    
+    void get2Drates(float &rate, float &rate_err, TH2F* rate_map, float x, float y);
+    void get1Drates(float &rate, float &rate_err, TH1F* rate_map, float x);
+    
+    void getRatesBoostedMu(float &realRate, float &realRate_err, float &fakeRate, float &fakeRate_err, float lepPt, float closejl_DR);
+    void getRatesBoostedEl(float &realRate, float &realRate_err, float &fakeRate, float &fakeRate_err, float lepPt, float closejl_DR);
+    void getRatesResolvedMu(float &realRate, float &realRate_err, float &fakeRate, float &fakeRate_err, float lepPt, float closejl_DR, float absEta, float cosDPhi);
+    void getRatesResolvedEl(float &realRate, float &realRate_err, float &fakeRate, float &fakeRate_err, float lepPt, float closejl_DR, float absEta, float cosDPhi);
+    
+    
   private:
 
     TH2F * eff_map_resolved_e;
     TH2F * eff_map_resolved_mu;
     TH2F * eff_map_boosted_e;
     TH2F * eff_map_boosted_mu;
-    
-    TH2F * eff_map;
-	
-    TH1F * fake_pt_resolved_e;
-    TH1F * fake_pt_resolved_mu;
+    	
+    TH2F * fake_map_resolved_e;
+    TH2F * fake_map_resolved_e_lEta;
+    TH2F * fake_map_resolved_e_hEta;
+    TH2F * fake_map_resolved_mu;
+    	
     TH1F * fake_pt_boosted_e;
-    TH1F * fake_pt_boosted_mu;
-    
-    TH1F * fake_dr_resolved_e;
-    TH1F * fake_dr_resolved_mu;
-    TH1F * fake_dr_boosted_e;
     TH1F * fake_dr_boosted_mu;
     
-    TH1F * fake_dr;;
-    TH1F * fake_pt;
-    
     HistogramService m_hSvc;
-    
-    bool fake_1Dparam_dr;
-    
+        
 };
 
 #endif
