@@ -1,3 +1,9 @@
+2016-04-04 Marino Romano <sromanos@cern.ch>
+	* Updating multijet estimation tools
+	* New 3D paramatrization of the fake rates
+	* Adding new 2D and 3D fake rates for W+jets (Electron channel for the moment)
+	* TopNtupleAnalysis-00-02-13
+
 2015-12-23 Marino Romano <sromanos@cern.ch>
 	* Updating multijet estimation tools
 	* Adding reaf and fake efficiencies maps: eff_ttbar.root and fake.root
